--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 
 body {
   background-color: #81a69b;
-  background-image: url(http://static.frontendmasters.com/resources/2019-05-02-complete-intro-react-v5/image-background.png);
+  background-image: url(images/image-background.png);
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -21,7 +21,6 @@ body {
   margin: 0px 25px 0px 0px;
   padding: 35px 15px 15px 15px;
   border-radius: 5px;
-  float: left;
 }
 
 .search {
@@ -87,7 +86,7 @@ body {
 header > a,
 #root > div > h1 {
   display: inline-block;
-  background-image: url(http://static.frontendmasters.com/resources/2019-05-02-complete-intro-react-v5/image-logo.png);
+  background-image: url(images/image-logo.png);
   width: 279px;
   height: 76px;
   overflow: hidden;
